# persistent-ds-cplusplus

./: .arcconfig  .gitignore  AbstractDoublyLinkedList.cpp  AbstractDoublyLinkedList.h  CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  Doxyfile  MSc.kdev4  Node.cpp  Node.h  README.md  main.cpp  main_ns.h  rollback_reorder_lazy_worstcase.cpp  test_dot_graph.cpp  test_merge_reorder.cpp  test_rollback_blackbox.cpp  test_rollback_eliminate_reorder.cpp  test_rollback_naive.cpp  test_rollback_reorder.cpp  test_rollback_snapshots.cpp  todo
.kdev4/: MSc.kdev4  _custom.kdev4
ephemeral/: DoublyLinkedList.cpp  DoublyLinkedList.h  Node.cpp  Node.h
node_copying/: DoublyLinkedList.cpp  DoublyLinkedList.h  Node.cpp  Node.h
partiallypersistent/: DoublyLinkedList.cpp  DoublyLinkedList.h  Node.cpp  Node.h
presentation/: .texlipse  presentation.tex
presentation/spreadsheets/: compare_rollbacks.gnumeric  compare_rollbacks_combined_head_only.gnumeric  compare_rollbacks_head_only.gnumeric
report/: .Introduction.tex.ini  .texlipse  Acknowledgements.tex  Appendix1.tex  Background.tex  Conclusion.tex  EmpiricalAnalysis.tex  Introduction.tex  LukeThesis.sty  Method.tex  Preface.tex  References.bib  SummaryUK.tex  Thesis.tex
report/figures/: adaptive-d-increase.gnumeric
report/spreadsheets/: all-operations-summed.gnumeric  comparative_2012-11-12.gnumeric  comparative_2012-11-14.gnumeric  comparative_2012-11-21.gnumeric  compare_rollbacks.gnumeric  compare_rollbacks_head_only.gnumeric  gofigure.gnumeric  gofigure_combined.gnumeric  gofigure_combined_head_only.gnumeric  gofigure_combined_median.gnumeric  gofigure_sequential.gnumeric  space.gnumeric  space_results.gnumeric
rollback/: AbstractRollbackDoublyLinkedList.cpp  AbstractRollbackDoublyLinkedList.h  CMakeLists.txt
rollback/blackbox/: DoublyLinkedList.cpp  DoublyLinkedList.h
rollback/eliminate_reorder/: DoublyLinkedList.cpp  DoublyLinkedList.h
rollback/reorder/: DoublyLinkedList.cpp  DoublyLinkedList.h
rollback_lazy/: DoublyLinkedList.cpp  DoublyLinkedList.h
rollback_naive/: DoublyLinkedList.cpp  DoublyLinkedList.h
rollback_reorder/: DoublyLinkedList.cpp  DoublyLinkedList.h
rollback_reorder_lazy/: DoublyLinkedList.cpp  DoublyLinkedList.h
rollback_reorder_only_lazy/: DoublyLinkedList.cpp  DoublyLinkedList.h
